added profile update (includes image upload)

--- a/TraversalCoreProject/TraversalCoreProject.csproj
+++ b/TraversalCoreProject/TraversalCoreProject.csproj
@@ -31,6 +31,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Member\Data\" />
+    <Folder Include="wwwroot\userImages\" />
   </ItemGroup>
 
 </Project>
