--- a/TraversalCoreProject/TraversalCoreProject.csproj
+++ b/TraversalCoreProject/TraversalCoreProject.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.105.0" />
     <PackageReference Include="EPPlus" Version="8.2.1" />
+    <PackageReference Include="iTextSharp.LGPLv2.Core" Version="3.7.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
@@ -35,6 +36,7 @@
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Member\Data\" />
+    <Folder Include="wwwroot\PDFReports\" />
     <Folder Include="wwwroot\userImages\" />
   </ItemGroup>
 
