--- a/SignalRApiForMSSQL/appsettings.json
+++ b/SignalRApiForMSSQL/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=SINAN;Database=TraversalSignalRDb;Integrated Security=true;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
